--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -74,9 +74,9 @@ admin_34 : "Failed to seek the current stream."
 # Bot 
 
 # Start
-start_1 : "Thanks for having me in {0}.\n{1} is alive.\n\nFor any assistance or help, checkout our support group and channel."
-start_2 : "Hello, My name is {0}.\n\nI'm a telegram streaming bot with some useful features. Supporting platforms like Youtube, Spotify, Resso, AppleMusic , Soundcloud etc.\n\nFeel free to add me to your groups."
-start_3 : "Welcome To {0}\n\nI don't need any **admin permission** to work ( until asked for ).\n\nAssistant Username:- @{1}\nAssistant ID:- {2}"
+start_1 : "Tʜᴀɴᴋs ғᴏʀ ʜᴀᴠɪɴɢ ᴍᴇ ɪɴ {0}.\n{1} ɪs ᴀʟɪᴠᴇ.\n\nFᴏʀ ᴀɴʏ ᴀssɪsᴛᴀɴᴄᴇ ᴏʀ ʜᴇʟᴘ, ᴄʜᴇᴄᴋᴏᴜᴛ ᴏᴜʀ sᴜᴘᴘᴏʀ ɢʀᴏᴜᴘ ᴏʀ ᴄʜᴀɴɴᴇʟ ᴏʀ ᴏᴡɴᴇʀ."
+start_2 : "Hᴇʟʟᴏ ᴍʏ ɴᴀᴍᴇ ɪs {0}.\n\nI'ᴍ ᴀ ᴛᴇʟᴇɢʀᴀᴍ sᴛʀᴇᴀᴍɪɴɢ ʙᴏᴛ ᴡɪᴛʜ sᴏᴍᴇ ᴜsᴇғᴜʟ ғᴇᴀᴛᴜʀᴇs. Sᴜᴘᴘᴏʀᴛɪɴɢ ᴘʟᴀᴛғᴏʀᴍs ʟɪᴋᴇ Yᴏᴜᴛᴜʙᴇ, Sʟᴏᴛɪғʏ, Rᴇssᴏ, AᴘᴘʟᴇMᴜsɪᴄ, Sᴏᴜɴᴅᴄʟᴏᴜᴅ ᴇᴛᴄ.\n\nFᴇᴇʟ ғʀᴇᴇ ᴛᴏ ᴀᴅᴅ ᴍᴇ ᴛᴏ ʏᴏᴜʀ ɢʀᴘᴜᴘs."
+start_3 : "Wᴇʟᴄᴏᴍᴇ ᴛᴏ {0}\n\nMᴀᴋᴇ **ADMIN** ᴛᴏ ᴛʜᴇ ʙᴏᴛ ᴛᴏ ᴇɴᴊᴏʏ sᴇᴀᴍʟᴇss ᴍᴜsɪᴄ ᴇxᴘᴇʀɪᴇɴᴄᴇ ɪɴ ʏᴏᴜʀ ɢʀᴏᴜᴘ.\n\nAssɪsᴛᴀɴᴛ ᴜsᴇʀɴᴀᴍᴇ:- @{1}\nAssɪsᴛᴀɴᴛ ID:- {2}"
 start_4 : "{0}'s Owner[{1}] has just joined your chat."
 start_5 : "A member of {0}'s Sudo User[{1}] has just joined your chat."
 start_6 : "❗️ **Supergroup Needed** ❗️\n\nPlease convert your **group** to **supergroup** and then add me back.\n\n**How to make supergroup?**\n✅ Make your group's chat history **visible** once."
@@ -246,22 +246,22 @@ UNBAN_BUTTON : "🗑 Unban Assistant"
 L_B_1 : "🚀 Checkout Lyrics Now"
 
 # Start
-S_B_1 : "🗒 Commands"
-S_B_2 : "🔧 Settings"
-S_B_3 : "📨 Support"
-S_B_4 : "📨 Channel"
-S_B_5 : "✚ Add me to your Group"
-S_B_6 : "💡 Git Repo"
-S_B_7 : "👤 Bot Owner"
-S_B_8 : "🔎 How to Use? Commands Menu."
+S_B_1 : "🗒 Cᴏᴍᴍᴀɴᴅs"
+S_B_2 : "🔧 Sᴇᴛᴛɪɴɢs"
+S_B_3 : "📨 Sᴜᴘᴘᴏʀᴛ"
+S_B_4 : "📨 Cʜᴀɴɴᴇʟ"
+S_B_5 : "✚ Aᴅᴅ ᴍᴇ ᴛᴏ ʏᴏᴜʀ ɢʀᴏᴜᴘ⚡"
+S_B_6 : "💡 Gɪᴛ ʀᴇᴘᴏ"
+S_B_7 : "💙 Bᴏᴛ ᴏᴡɴᴇʀ 💙"
+S_B_8 : "🔎 Hᴏᴡ ᴛᴏ ᴜsᴇ? Cᴏᴍᴍᴀɴᴅs ᴍᴇɴᴜ."
 
 #Help 
-H_B_1 : "Admin Commands"
-H_B_2 : "Play Commands"
-H_B_3 : "Bot Commands"
-H_B_4 : "Extra Commands"
-H_B_5 : "Close Menu"
-H_B_6 : "SudoUser Commands"
+H_B_1 : "Aᴅᴍɪɴ Cᴏᴍᴍᴀɴᴅs⚡"
+H_B_2 : "Pʟᴀʏ Cᴏᴍᴍᴀɴᴅs🫣"
+H_B_3 : "Bᴏᴛ Cᴏᴍᴍᴀɴᴅs🤖"
+H_B_4 : "Exᴛʀᴀ Cᴏᴍᴍᴀɴᴅs"
+H_B_5 : "Cʟᴏsᴇ ᴍᴇɴᴜ"
+H_B_6 : "SᴜᴅᴏUsᴇʀ Cᴏᴍᴍᴀɴᴅs"
 
 #PlayMode
 PM_B_1 : "DirectPlay"
